--- a/src/css/app.css
+++ b/src/css/app.css
@@ -220,6 +220,9 @@ html, body {
   .material-button[data-color="green"]::before {
     background: #FFF; }
 
+.cardPic {
+  overflow: hidden; }
+
 .mapContainer {
   position: fixed;
   top: 0;
@@ -232,6 +235,9 @@ html, body {
   width: 100%;
   height: 100%;
   background-color: rgba(173, 216, 230, 0.4); }
+
+.card-container {
+  overflow: hidden; }
 
 .filter {
   transform: translateY(-100%);
@@ -280,15 +286,16 @@ html, body {
     background-color: #f3f3f3; }
 
 .card {
+  background-color: #ededed;
+  color: #555555;
   border: 3px #fff solid;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
   transition: all 0.3s linear;
   cursor: pointer;
   position: relative;
-  background-color: #fff;
   padding: 10px; }
   .card:hover {
-    background-color: #f3f3f3;
+    background-color: #fff;
     border-color: #f3f3f3; }
   .card img {
     max-width: calc(100%);
@@ -336,10 +343,15 @@ html, body {
         background-repeat: no-repeat; }
   .card.is-active {
     border-color: rgba(0, 162, 255, 0.55);
-    border-radius: 4px; }
+    border-radius: 4px;
+    background-color: white !important;
+    color: #6c6c6c; }
     .card.is-active .index {
       background-color: rgba(0, 162, 255, 0.8);
       border-radius: 2px; }
+
+.fontawesomeIcons {
+  color: gray; }
 
 .warning {
   font-size: 30px;
