--- a/src/css/app.css
+++ b/src/css/app.css
@@ -38,7 +38,7 @@ header {
   padding: 30px;
   z-index: 2;
   position: relative;
-  background-color: #cfcfcf; }
+  background-color: #3f6895; }
   header img {
     max-width: 40px; }
   header h1 {
@@ -98,15 +98,8 @@ html, body {
   border-radius: 5px;
   padding: 3px 14px;
   font-size: 16px;
-  background-color: #00A2FF;
-  color: #fff;
-  border: 1px #fff solid;
-  transition: all 0.3s linear;
   display: block;
   width: 100%; }
-  .btn-filter:hover, .btn-filter:active {
-    background-color: #fff;
-    color: #222222; }
   .btn-filter span {
     display: none; }
   @media (min-width: 992px) {
@@ -179,6 +172,55 @@ html, body {
     opacity: 0.4;
     transform: scale(0);
     transition: 0s; }
+
+.material-dark-button {
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  display: inline-block;
+  font-family: 'Noto Sans';
+  font-size: 1.4rem;
+  outline: none;
+  overflow: hidden;
+  padding: 0.4rem .9rem;
+  text-transform: uppercase;
+  box-shadow: 0px 4px 8px #333333;
+  width: 85px;
+  transition: transform 0.18s ease-in, box-shadow 0.09s ease-in; }
+  .material-dark-button:hover {
+    transform: translateY(-2px);
+    box-shadow: 0px 7px 13px #333333; }
+  .material-dark-button:hover > .material-icon {
+    margin-left: 0;
+    opacity: 1;
+    transform: scale(1);
+    transition: all 150ms ease-out; }
+  .material-dark-button:active > .material-icon {
+    opacity: 1;
+    width: 1.5rem;
+    transition: 0s; }
+  .material-dark-button::before {
+    border-radius: 60%;
+    content: '';
+    display: block;
+    height: 6rem;
+    margin: -3rem 0;
+    opacity: 0;
+    position: relative;
+    top: 0.5rem;
+    transform: scale(3);
+    transition: 1s;
+    width: 100%;
+    will-change: opacity, transform; }
+  .material-dark-button:active::before {
+    opacity: 0.4;
+    transform: scale(0);
+    transition: 0s; }
+
+.dark-btn {
+  box-shadow: 0px 4px 8px #333333; }
+  .dark-btn:hover {
+    box-shadow: 0px 7px 13px #333333; }
 
 .material-button[data-color="orange"] {
   background: linear-gradient(45deg, #f83600, #ff9a00);
@@ -276,6 +318,13 @@ html, body {
   position: relative;
   z-index: 3; }
 
+.filterBox:nth-child(7) select {
+  width: 190%;
+  /*'small' is in the map of variables aka properties*/ }
+  @media (min-width: 820px) {
+    .filterBox:nth-child(7) select {
+      width: 100%; } }
+
 .cards {
   max-width: 100%; }
 
@@ -310,9 +359,8 @@ html, body {
     top: 0;
     right: 0;
     display: block;
-    padding: 0 10px;
-    border-radius: 3px;
-    padding-top: 3px; }
+    padding: 2px 5px 1px;
+    border-radius: 3px; }
   .card .price {
     margin: 0;
     padding: 10px 0;
@@ -324,9 +372,8 @@ html, body {
     padding: 0;
     margin: 0; }
     .card .features li {
-      padding-left: 24px;
       margin-right: 10px;
-      display: inline-block; }
+      display: inline; }
       .card .features li span {
         display: none; }
       .card .features li.icon-bed {
@@ -348,7 +395,7 @@ html, body {
     color: #6c6c6c; }
     .card.is-active .index {
       background-color: rgba(0, 162, 255, 0.8);
-      border-radius: 2px; }
+      border-radius: 4px; }
 
 .fontawesomeIcons {
   color: gray; }
