--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -12,7 +12,7 @@ header {
     padding: 30px;
     z-index: 2;
     position: relative;
-    background-color: darken($lightGray, 4);
+    background-color: lighten($navyBlue, 14);
     img {
         max-width: 40px;
     }
