--- a/src/scss/modules/_buttons.scss
+++ b/src/scss/modules/_buttons.scss
@@ -4,16 +4,16 @@
     border-radius: 5px;
     padding: 3px 14px;
     font-size: 16px;
-    background-color: $caribbean;
-    color: #fff;
-    border: 1px #fff solid;
-    transition: all 0.3s linear;
+    // background-color: $caribbean;
+    // color: #fff;
+    // border: 1px #fff solid;
+    // transition: all 0.3s linear;
     display: block;
     width: 100%;
     &:hover,
     &:active {
-        background-color: #fff;
-        color: $dark-grey;
+        // background-color: $caribbean;
+        // color: $dark-grey;
     }
     span {display: none}
     @media (min-width: 992px) {
@@ -102,6 +102,63 @@
     opacity: 0.4;
     transform: scale(0.0);
     transition: 0s;
+  }
+}
+.material-dark-button {
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  display: inline-block;
+  font-family: 'Noto Sans';
+  font-size: 1.4rem;
+  outline: none;
+  overflow: hidden;
+  padding: 0.4rem .9rem;
+  text-transform: uppercase;
+  box-shadow: 0px 4px 8px lighten(black, 20);
+  width: 85px;
+  transition: transform 0.18s ease-in, box-shadow 0.09s ease-in;
+	// background-image: linear-gradient(45deg, rgb(248, 54, 0), #ff9a00);
+  &:hover {
+    transform: translateY(-2px);
+    box-shadow: 0px 7px 13px lighten(black, 20);
+  }
+
+  &:hover > .material-icon{
+    margin-left: 0;
+    opacity: 1;
+    transform: scale(1.0);
+    transition: all 150ms ease-out;
+  }
+  &:active > .material-icon{
+    opacity: 1;
+    width: 1.5rem;
+    transition: 0s;
+  }
+  &::before{
+    border-radius: 60%;
+    content: '';
+    display: block;
+    height: 6rem;
+    margin: -3rem 0;
+    opacity: 0;
+    position: relative;
+    top: 0.5rem;
+    transform: scale(3.0);
+    transition: 1s;
+    width: 100%;
+    will-change: opacity, transform;
+  }
+  &:active::before{
+    opacity: 0.4;
+    transform: scale(0.0);
+    transition: 0s;
+  }
+}
+.dark-btn {
+  box-shadow: 0px 4px 8px lighten(black, 20);
+  &:hover {
+      box-shadow: 0px 7px 13px lighten(black, 20);
   }
 }
 @include material-button("orange", #FFF, linear-gradient(45deg, rgb(248, 54, 0), #ff9a00), lighten(rgb(248, 138, 0), 15%));
