--- a/src/css/app.css
+++ b/src/css/app.css
@@ -239,10 +239,10 @@ html, body {
     background: #FFF; }
 
 .material-button[data-color="gray"] {
-  background: linear-gradient(45deg, #abb6c0, #778899);
+  background: linear-gradient(45deg, #b1bbc5, #4b5864);
   color: #FFF; }
   .material-button[data-color="gray"]:hover {
-    background: #4dbeff; }
+    background: #a6a6a6; }
   .material-button[data-color="gray"]::before {
     background: #FFF; }
 
