--- a/src/css/app.css
+++ b/src/css/app.css
@@ -130,7 +130,7 @@ html, body {
       border-color: #00A2FF; }
 
 .material-button {
-  border-radius: 4px;
+  border-radius: 3px;
   border: none;
   cursor: pointer;
   display: inline-block;
@@ -173,54 +173,16 @@ html, body {
     transform: scale(0);
     transition: 0s; }
 
-.material-dark-button {
-  border-radius: 4px;
-  border: none;
-  cursor: pointer;
-  display: inline-block;
-  font-family: 'Noto Sans';
-  font-size: 1.4rem;
-  outline: none;
-  overflow: hidden;
-  padding: 0.4rem .9rem;
-  text-transform: uppercase;
-  box-shadow: 0px 4px 8px #333333;
-  width: 85px;
-  transition: transform 0.18s ease-in, box-shadow 0.09s ease-in; }
-  .material-dark-button:hover {
-    transform: translateY(-2px);
-    box-shadow: 0px 7px 13px #333333; }
-  .material-dark-button:hover > .material-icon {
-    margin-left: 0;
-    opacity: 1;
-    transform: scale(1);
-    transition: all 150ms ease-out; }
-  .material-dark-button:active > .material-icon {
-    opacity: 1;
-    width: 1.5rem;
-    transition: 0s; }
-  .material-dark-button::before {
-    border-radius: 60%;
-    content: '';
-    display: block;
-    height: 6rem;
-    margin: -3rem 0;
-    opacity: 0;
-    position: relative;
-    top: 0.5rem;
-    transform: scale(3);
-    transition: 1s;
-    width: 100%;
-    will-change: opacity, transform; }
-  .material-dark-button:active::before {
-    opacity: 0.4;
-    transform: scale(0);
-    transition: 0s; }
-
 .dark-btn {
   box-shadow: 0px 4px 8px #333333; }
   .dark-btn:hover {
     box-shadow: 0px 7px 13px #333333; }
+
+.sm-btn {
+  padding: 0.4rem .9rem;
+  box-shadow: 0px 4px 8px #919191;
+  width: 55px;
+  font-size: 1.2rem; }
 
 .material-button[data-color="orange"] {
   background: linear-gradient(45deg, #f83600, #ff9a00);
@@ -399,6 +361,45 @@ html, body {
 
 .fontawesomeIcons {
   color: gray; }
+
+.propertySummary {
+  width: 94%;
+  border: 1px solid #ccc;
+  box-shadow: 1px 1px 1px black;
+  padding: 16px;
+  left: 3%;
+  top: 4%;
+  font-family: 'EB Garamond'; }
+
+.modals {
+  position: fixed;
+  z-index: 500;
+  background-color: white;
+  box-sizing: border-box;
+  transition: all 0.095s ease-out;
+  /*'small' is in the map of variables aka properties*/ }
+
+.close {
+  display: block;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 10px;
+  opacity: .75;
+  color: gray; }
+  .close:hover {
+    color: #e43200;
+    opacity: 1; }
+
+.backdrop {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 100;
+  left: 0;
+  top: 0;
+  background-color: rgba(50, 50, 50, 0.2); }
 
 .warning {
   font-size: 30px;
