--- a/src/scss/layout/_modal.scss
+++ b/src/scss/layout/_modal.scss
@@ -1,3 +1,69 @@
+.propertySummary {
+  width: 94%;
+  border: 1px solid #ccc;
+  box-shadow: 1px 1px 1px black;
+  padding: 16px;
+  left: 3%;
+  top: 4%;
+  font-family: 'EB Garamond';
+}
+
+.modals {
+    position: fixed;
+    z-index: 500;
+    background-color: white;
+    box-sizing: border-box;
+    transition: all 0.095s ease-out;
+    @include mediaQ('medium') {
+
+    }
+}
+
+// @media (min-width: 600px) {
+//     .modals {
+//         width: 500px;
+//         left: calc(20% - 450px);
+//     }
+// }
+
+.close {
+    display: block;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 10px;
+    opacity: .75;
+    color: gray;
+    &:hover {
+      color: darken( $orange, 4 );
+      opacity: 1;
+    }
+}
+
+// @media (min-width: 600px) {
+//     .modals {
+//         width: 440px;
+//         left: calc(74% - 250px);
+//     }
+// }
+// @media (min-width: 1100px) {
+//     .modals {
+//         left: calc(81% - 250px);
+//     }
+// }
+
+.backdrop {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 100;
+  left: 0;
+  top: 0;
+  background-color: rgba(50,50,50,.2);
+}
+
+// Petr Tichy //
 .warning {
     font-size: 30px;
     text-align: center;
@@ -7,3 +73,11 @@
         margin: 0 auto 30px auto;
     }
 }
+// == BREAKPOINTS REFERENCE == //
+// $breakPoint:(
+// 'extraLarge': 992px,
+// 'large': 820px,
+// 'medium': 607px,
+// 'small': 576px,
+// 'extraSmall': 575px,
+// );
