--- a/src/css/app.css
+++ b/src/css/app.css
@@ -365,18 +365,43 @@ html, body {
 .propertySummary {
   width: 94%;
   border: 1px solid #ccc;
-  box-shadow: 1px 1px 1px black;
+  box-shadow: 0px 1px 7px rgba(20, 20, 20, 0.65);
   padding: 16px;
   left: 3%;
   top: 4%;
-  font-family: 'EB Garamond'; }
+  font-family: 'EB Garamond';
+  border-radius: 5px;
+  /*'small' is in the map of variables aka properties*/
+  /*'small' is in the map of variables aka properties*/ }
+  @media (min-width: 576px) {
+    .propertySummary {
+      left: 12%;
+      top: 12%;
+      width: 60%; } }
+  @media (min-width: 992px) {
+    .propertySummary {
+      left: 24%;
+      top: 12%;
+      width: 40%; } }
+  .propertySummary .summary-body {
+    margin-top: 15px;
+    font: 1.3rem 'Montserrat';
+    /*'small' is in the map of variables aka properties*/ }
+    @media (min-width: 576px) {
+      .propertySummary .summary-body {
+        font: 1.7rem 'Montserrat'; } }
+    .propertySummary .summary-body ul {
+      padding: 0px; }
+      .propertySummary .summary-body ul li {
+        display: inline-block;
+        margin: 0px 9px 0px 0px; }
 
 .modals {
   position: fixed;
   z-index: 500;
   background-color: white;
   box-sizing: border-box;
-  transition: all 0.095s ease-out;
+  transition: all 0.2s ease-out;
   /*'small' is in the map of variables aka properties*/ }
 
 .close {
