--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -15,6 +15,12 @@ header {
     background-color: lighten($navyBlue, 14);
     img {
         max-width: 40px;
+        background-color: transparentize($lightGray, 0.2);
+        border-radius: 8px;
+        padding: 4%;
+        @include mediaQ('small') {
+          padding: 1.1%;
+        }
     }
     h1 {
         display: inline-block;
