--- a/src/scss/layout/_modal.scss
+++ b/src/scss/layout/_modal.scss
@@ -7,6 +7,8 @@
   top: 4%;
   font-family: 'EB Garamond';
   border-radius: 5px;
+  border-top: 4px solid lighten($navyBlue, 18);
+  border-bottom: 4px solid lighten($navyBlue, 18); 
   @include mediaQ('small') {
     left: 12%;
     top: 12%;
