--- a/src/scss/utilities/_config.scss
+++ b/src/scss/utilities/_config.scss
@@ -13,7 +13,7 @@ $caribbean: #00A2FF;
 $turquoise: #00BCD4;
 $orange: rgb(248, 54, 0);
 $brightOrange: #fe8c00;
-$navyBlue: lighten(#243b55, 4);
+$navyBlue: #30548a;
 $darkNavyBlue: #141e3a;
 $green: #2ecc71;
 $sunsetYellow: rgba(255, 195, 0, 0.94);
