--- a/src/css/app.css
+++ b/src/css/app.css
@@ -38,10 +38,10 @@ header {
   padding: 30px;
   z-index: 2;
   position: relative;
-  background-color: #3f6895; }
+  background-color: #3862a1; }
   header img {
     max-width: 40px;
-    background-color: #e8e8e8;
+    background-color: #f8f8f8;
     border-radius: 8px;
     padding: 4%;
     /*'small' is in the map of variables aka properties*/ }
@@ -100,13 +100,50 @@ html, body {
   .credits a {
     color: #4b4668; }
 
+.input {
+  color: gray; }
+  .input select {
+    border-radius: 4px;
+    box-shadow: none;
+    border-color: transparent;
+    background-color: #f0f0f0; }
+    .input select:active, .input select:focus {
+      color: #5a5a5a; }
+  .input label {
+    display: block;
+    color: gray;
+    font-weight: bold;
+    text-decoration: underline;
+    margin-top: 2px; }
+
+.btn-login {
+  top: 3%;
+  right: 3%;
+  position: absolute;
+  background: transparent;
+  border: none;
+  text-decoration: none;
+  font-family: 'Montserrat';
+  font-weight: bold;
+  font-size: 1.25rem;
+  color: white;
+  /*'small' is in the map of variables aka properties*/
+  /*'small' is in the map of variables aka properties*/ }
+  .btn-login:hover, .btn-login:active {
+    text-decoration: underline; }
+  @media (min-width: 576px) {
+    .btn-login {
+      font-size: 1.36rem; } }
+  @media (min-width: 820px) {
+    .btn-login {
+      font-size: 1.5rem; } }
+
 .btn-filter {
   margin-left: 15px;
   border-radius: 5px;
   padding: 3px 14px;
   font-size: 16px;
-  display: block;
-  width: 100%; }
+  display: block; }
   .btn-filter span {
     display: none; }
   @media (min-width: 992px) {
@@ -148,7 +185,6 @@ html, body {
   padding: 0.4rem .9rem;
   text-transform: uppercase;
   box-shadow: 0px 4px 8px #919191;
-  width: 85px;
   transition: transform 0.18s ease-in, box-shadow 0.09s ease-in; }
   .material-button:hover {
     transform: translateY(-2px);
@@ -188,7 +224,6 @@ html, body {
 .sm-btn {
   padding: 0.4rem .9rem;
   box-shadow: 0px 4px 8px #919191;
-  width: 55px;
   font-size: 1.2rem; }
 
 .material-button[data-color="orange"] {
@@ -249,6 +284,29 @@ html, body {
 
 .card-container {
   overflow: hidden; }
+
+.input {
+  margin: 22px 0px;
+  font-family: 'Montserrat'; }
+  .input input {
+    border-radius: 4px;
+    box-shadow: none;
+    border-color: transparent;
+    background-color: #f0f0f0;
+    width: 70%; }
+    .input input:active, .input input:focus {
+      color: #5a5a5a; }
+  .input label {
+    display: block;
+    color: gray;
+    font-weight: bold;
+    text-decoration: underline;
+    margin-top: 2px; }
+  .input .errorMessage {
+    color: red;
+    font-size: 10px;
+    text-align: left;
+    margin: 0px; }
 
 .filter {
   transform: translateY(-100%);
@@ -378,8 +436,8 @@ html, body {
   top: 4%;
   font-family: 'EB Garamond';
   border-radius: 5px;
-  border-top: 4px solid #4572a4;
-  border-bottom: 4px solid #4572a4;
+  border-top: 4px solid #5380c3;
+  border-bottom: 4px solid #5380c3;
   /*'small' is in the map of variables aka properties*/
   /*'small' is in the map of variables aka properties*/ }
   @media (min-width: 576px) {
