--- a/src/scss/layout/_panel.scss
+++ b/src/scss/layout/_panel.scss
@@ -1,3 +1,34 @@
+.input {
+  margin: 22px 0px;
+  font-family: 'Montserrat';
+  input {
+    border-radius: 4px;
+    box-shadow: none;
+    border-color: transparent;
+    // border-color: lighten($navyBlue, 20);
+    background-color: #f0f0f0;
+    width: 70%;
+    &:active, &:focus {
+      color: darken(gray, 15);
+    }
+  }
+    label {
+      display: block;
+      color: gray;
+      font-weight: bold;
+      text-decoration: underline;
+      margin-top: 2px;
+    }
+    .errorMessage {
+        color: red;
+        font-size: 10px;
+        text-align: left;
+        margin: 0px;
+    }
+}
+
+
+// ==== Petr Tichy ==========
 .filter {
     transform: translateY(-100%);
     transition: transform 0.3s $transition-easing;
